<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_translate"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/text_translate" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/about" />
    </group>

</menu>
